stash text edit cleanup

--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -14,7 +14,7 @@ lead_author_surname: Stachelek
 # doi: "https://cran.r-project.org/package=YourPackage"
 
 abstract: | 
-  Size is a critical factor determining the rate and occurrence of specific lake processes such as carbon sequestration. Unfortunately, the exact lake size-abundance distribution is unknown in part because we do not have a complete census of all lakes. More specifically, as lakes become smaller they are less likely to be included in lake databases either because they are too small to be resolved from remote sensing products or because of limited ground surveying effort. The exclusion of small lakes relative to large lakes is known as censoring.
+  Size is a critical factor determining the rate and occurrence of specific lake processes such as carbon sequestration relative to greenhouse gas emissions. Unfortunately, the exact lake size-abundance distribution is unknown in part because we do not have a complete census of all lakes. More specifically, as lakes become smaller they are less likely to be included in lake databases either because they are too small to be resolved from remote sensing products or because of limited ground surveying effort. The exclusion of small lakes relative to large lakes is known as censoring.
 
   The present study explores one potential shortcoming of previous approaches at estimating global lake area and dealing with censoring. Namely, that the typical frequentist curve fitting and ad-hoc cutoff determination strategy (visual inspection to determine a likely censoring point) taken by previous studies yields an over-exact lake area estimate with no reported uncertainty. I address this shortcoming by fitting models in a Bayesian framework where each parameter contributes uncertainty to model estimates. I show that such although such models produce a more realistic estimate of lake area uncertainty they underestimate true total lake area. The degree of this underestimation is likely related to the proportion of the dataset subject to censoring. Ultimately, this may explain the fact that total lake area estimates have increased through time as the resolution of lake databases has improved.
 
