--- a/manuscript/pareto-lakes.bib
+++ b/manuscript/pareto-lakes.bib
@@ -302,6 +302,19 @@
   number = {2}
 }
 
+@article{messagerEstimatingVolumeAge2016,
+  title = {Estimating the Volume and Age of Water Stored in Global Lakes Using a Geo-Statistical Approach},
+  author = {Messager, Mathis Lo{\"i}c and Lehner, Bernhard and Grill, G{\"u}nther and Nedeva, Irena and Schmitt, Oliver},
+  year = {2016},
+  volume = {7},
+  pages = {13603},
+  issn = {2041-1723},
+  doi = {10.1038/ncomms13603},
+  file = {/home/julie/Zotero/storage/BZKMVJKP/ncomms13603(1).pdf;/home/julie/Zotero/storage/FEHU6ZUE/ncomms13603-s1.pdf},
+  journal = {Nature Communications},
+  keywords = {tocite}
+}
+
 @article{newman_power_2005,
   title = {Power Laws, {{Pareto}} Distributions and {{Zipf}}'s Law},
   author = {Newman, Mej},
