correct pdf metadata

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -45,7 +45,7 @@
 %%% $ pdfinfo template.pdf
 \hypersetup{
 pdftitle={Quantifying uncertainty in Pareto lake area estimates},
-pdfsubject={q-bio.NC, q-bio.QM},
+pdfsubject={stat.AP},
 pdfauthor={J.~Stachelek}
 }
 
